--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 HELP.xcodeproj/project.xcworkspace/xcuserdata/vladislav.xcuserdatad/UserInterfaceState.xcuserstate
+
+HELP.xcodeproj/project.xcworkspace/xcuserdata/WildSpirit.xcuserdatad/UserInterfaceState.xcuserstate
