--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 HELP.xcodeproj/project.xcworkspace/xcuserdata/vladislav.xcuserdatad/UserInterfaceState.xcuserstate
 
 HELP.xcodeproj/project.xcworkspace/xcuserdata/WildSpirit.xcuserdatad/UserInterfaceState.xcuserstate
+
+HELP.xcodeproj/xcuserdata/WildSpirit.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
