--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ HELP.xcodeproj/project.xcworkspace/xcuserdata/WildSpirit.xcuserdatad/UserInterfa
 HELP.xcodeproj/xcuserdata/WildSpirit.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 *.xcbkptlist
+
+HELP.xcodeproj/project.pbxproj
